play-pit/Collaboration/Jira/jira-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: jira-software
 namespace: jira
 labels:
  app: jira-software
spec:
 replicas: 1
 selector:
  matchLabels:
   app: jira-software
 template:
  metadata:
   labels:
    app: jira-software
  spec:
   securityContext:
    fsGroup: 1000
   containers:
     - name: jira-software
       image: atlassian/jira-software
       imagePullPolicy: "IfNotPresent"
       ports:
        - name: http-port
          containerPort: 8080
       volumeMounts:
         - name: jira-home
           mountPath: /var/atlassian/application-data/jira
         - name: server-xml-volume
           mountPath: /opt/atlassian/jira/conf/server.xml
           subPath: server.xml
   volumes:
     - name: jira-home
       persistentVolumeClaim:
         claimName: jira-software-pvclaim
     - name: server-xml-volume
       configMap:
         name: server-xml
