play-pit/Collaboration/Jira/jira-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jira-software-service
  namespace: jira
  labels:
    app: jira-software
spec:
  type: ClusterIP
  ports:
   - port: 8080
     targetPort: 8080
     protocol: TCP
  selector:
    app: jira-software
