play-pit/Collaboration/Jira/jira-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jira-ingress
  namespace: jira
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
  - hosts:
    - jira.kx-as-code.local
  rules:
  - host: jira.kx-as-code.local
    http:
      paths:
       - path: /
         backend:
           serviceName: jira-software-service
           servicePort: 8080
